# task-flow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  gunicorn.conf.py  init-test_db.sh  logging.dev.yaml  pyproject.toml
.github/workflows/: github.ci.yaml  linter.ci.yaml  test.ci-cd.yaml  test.ci.yaml
migrations/: env.py
migrations/versions/: 01f2e76ff156_change_field_for_user.py  041d95f5321c_add_tables_tasks_and_catetories.py  059c72456d3b_initial_migrations.py  077cb52c0276_initial_migrations.py  1eaa6da1a5d9_add_unique_for_tasks_by_user_id_name.py  2025_03_02_0824-add_table_user.py  2025_03_02_0826-add_table_project.py  2025_03_02_0827-add_table_task.py  2068aed9e5bd_add_table_users.py  2bc6b71bb97b_add_new_field_for_user.py  3dae5eb34617_initial_migrations.py  53f955f0d892_initial_migrations.py  627272212fa5_initial_migrations.py  6472ea031991_delete_access_token_from_user.py  6da06f85d574_change_user_access_token_str_none.py  86f231d21ac3_change_field_for_user.py  90508ae5da04_initial_migrations.py  cbc03c25f609_add_user_id_for_tasks.py  fb9e6b49d436_initial_migrations.py
nginx/: nginx.conf
src/: bootstrap.py  dependencies.py  exceptions.py  main.py
src/apps/: __init__.py
src/apps/auth/: admin.py  router.py  routers.py  schemas.py  services.py
src/apps/healthcheck/: __init__.py  route.py  router.py  routers.py  schemas.py
src/apps/projects/: admin.py  models.py  repository.py  routers.py  schemas.py  services.py
src/apps/tasks/: __init__.py  admin.py  cache_repositories.py  enums.py  models.py  repositories.py  repository.py  route.py  router.py  routers.py  schemas.py  services.py
src/apps/users/: admin.py  models.py  repositories.py  router.py  routers.py  schemas.py  services.py
src/clients/: google.py  yandex.py
src/core/: db.py  dependencies.py  description.py  loggers.py  models.py  pagination.py  schemas.py  settings.py
src/core/services/: sentry.py
src/core/services/broker/: consumer.py
src/core/services/cache/: __init__.py  accessor.py  redis_connection.py
src/core/services/clients/: google.py  mail.py
src/core/utils/: __init__.py  generate_table_name.py  string.py  time.py
src/core/utils/auth/: password_validation.py
src/core/utils/db/: __init__.py
src/management/dummy_data/: generate_data.py
src/middlewares/: corse_middleware.py
src/templates/sqladmin/: login.html
src/worker/: celery.py
tests/: conftest.py  db_connector.py
tests/fixtures/: alembic.py  alembic_fixtures.py  infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/projects/: project_fixtures.py
tests/fixtures/tasks/: task_fixtures.py
tests/fixtures/users/: user_fixture.py  user_fixtures.py  user_model.py  users_repository.py
tests/integration/: test_healthcheck.py  test_migrations.py
tests/integration/auth/: test_auth_service.py  test_change_password.py  test_google_signup.py  test_login.py  test_yandex_signup.py
tests/integration/projects/: test_create_project.py  test_delete_project.py  test_get_project.py  test_update_project.py
tests/integration/tasks/: test_create_project_task.py  test_create_task.py  test_delete_task.py  test_get_project_task.py  test_get_task.py  test_update_project_task.py  test_update_task.py
tests/integration/users/: test_change_password.py  test_create_users.py  test_users_me.py
tests/unittests/auth/: test_auth_service.py
tests/unittests/utils/: test_create_table_name.py
